src/test/ui/missing/missing-items/missing-type-parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/missing-type-parameter.rs:4:5
   |
LL |     foo();
   |     ^^^ cannot infer type for `X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
